--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <li class="nav-item">
                   <a href="#">Contact</a>
                 </li>
+
+                <li class="nav-item">
+                  <a href="./register.html">Account</a>
+                </li>
               </ul>
               <form class="headerRight d-flex" role="search">
                 <div class="inputSearch position-relative">
